--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # Travis Continuous Integration Configuration File For ROS Control Projects
-sudo: required
-dist: trusty
-language: generic
+language: generic # optional, just removes the language badge
+
+services:
+  - docker
 
 notifications:
   email:
@@ -14,15 +15,18 @@ notifications:
 
 env:
   global:
-    - UPSTREAM_WORKSPACE=https://raw.github.com/ros-controls/ros_control/kinetic-devel/ros_control.rosinstall
-    - ROS_PARALLEL_TEST_JOBS=-j1
+    - UPSTREAM_WORKSPACE=https://raw.github.com/ros-controls/ros_control/\${ROS_DISTRO/lunar/kinetic}-devel/ros_control.rosinstall -control_msgs
   matrix:
     - ROS_DISTRO=kinetic ROS_REPO=ros
     - ROS_DISTRO=kinetic ROS_REPO=ros-shadow-fixed
     - ROS_DISTRO=lunar   ROS_REPO=ros
     - ROS_DISTRO=lunar   ROS_REPO=ros-shadow-fixed
-  
+    - ROS_DISTRO=melodic ROS_REPO=ros
+    - ROS_DISTRO=melodic ROS_REPO=ros-shadow-fixed
+    - ROS_DISTRO=melodic ROS_REPO=ros BUILDER=colcon
+
 install:
-  - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
+
 script:
-- .ci_config/travis.sh
+- .industrial_ci/travis.sh
