--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,13 @@
-# Travis Continuous Integration Configuration File For ROS Control Projects
-language: generic # optional, just removes the language badge
-
+language: generic
 services:
   - docker
 
-notifications:
-  email:
-    recipients:
-      - enrique.fernandez.perdomo@gmail.com
-      - bence.magyar.robotics@gmail.com
-      - gennaro.raiola@gmail.com
-    on_success: change #[always|never|change] # default: change
-    on_failure: change #[always|never|change] # default: always
-
 env:
-  global:
-    - UPSTREAM_WORKSPACE=https://raw.github.com/ros-controls/ros_control/\${ROS_DISTRO/lunar/kinetic}-devel/ros_control.rosinstall -control_msgs
   matrix:
-    - ROS_DISTRO=kinetic ROS_REPO=ros
-    - ROS_DISTRO=kinetic ROS_REPO=ros-shadow-fixed
-    - ROS_DISTRO=lunar   ROS_REPO=ros
-    - ROS_DISTRO=lunar   ROS_REPO=ros-shadow-fixed
-    - ROS_DISTRO=melodic ROS_REPO=ros
-    - ROS_DISTRO=melodic ROS_REPO=ros-shadow-fixed
-    - ROS_DISTRO=melodic ROS_REPO=ros BUILDER=colcon
+    - ROS_DISTRO="foxy" ROS_REPO=testing
+    - ROS_DISTRO="foxy" ROS_REPO=main
 
 install:
-  - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
-
+  -  git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
-- .industrial_ci/travis.sh
+  - .industrial_ci/travis.sh
