--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7deec1b
-	trimbase = 
+	trim = control_msgs
+	base = bf9dae3
+	trimbase = 7deec1b
 	parent = upstream
 	previous = 8a20a9f
