--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf9dae3
+	base = 75c1ce9
 	trimbase = 
 	parent = release/foxy/control_msgs
-	previous = 
+	previous = bf9dae3
