--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a116cc
+	base = ed96b21
 	trimbase = 
 	parent = debian/foxy/control_msgs
-	previous = 
+	previous = 1a116cc
