--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = 7bd6ba4
-	trimbase = 
+	base = a77a1b6
+	trimbase = 7bd6ba4
 	parent = upstream
 	previous = 8a20a9f
