--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = cf5b58a
-	trimbase = 
+	base = b427a87
+	trimbase = cf5b58a
 	parent = upstream
 	previous = 8a20a9f
