--- a/tracks.yaml
+++ b/tracks.yaml
@@ -321,4 +321,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: git://github.com/ros-controls/control_msgs.git
-    version: :{auto}
+    version: 2.3.0
+    version_saved: :{auto}
