--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = a03a3a8
-	trimbase = 
+	base = 7c393a9
+	trimbase = a03a3a8
 	parent = upstream
 	previous = e741538
