--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = 8c3f25c
-	trimbase = 
+	base = f5ab15d
+	trimbase = 8c3f25c
 	parent = upstream
 	previous = 791a597
