--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/control_msgs
-	previous = 
-	base = f5ab15d
+	previous = f5ab15d
+	base = e885204
 	trim = 
 	trimbase = 
