--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/control_msgs
-	previous = 
-	base = 585ea3f
+	previous = 585ea3f
+	base = 6b78a27
 	trim = 
 	trimbase = 
