--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = 0a55a5b
-	trimbase = 
+	base = ec3e838
+	trimbase = 0a55a5b
 	parent = upstream
 	previous = 791a597
