--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.0-1": ["Mon Mar 08 2021", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
+{"2.5.0-2": ["Fri Mar 12 2021", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "2.5.0-1": ["Mon Mar 08 2021", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
