--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = cf58d52
-	trimbase = 
+	base = 4b7f812
+	trimbase = cf58d52
 	parent = upstream
 	previous = 791a597
