--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = 1752e90
-	trimbase = 
+	base = 16a991e
+	trimbase = 1752e90
 	parent = upstream
 	previous = 264eb2e
