--- a/tracks.yaml
+++ b/tracks.yaml
@@ -163,8 +163,7 @@ tracks:
     ros_distro: galactic
     vcs_type: git
     vcs_uri: git://github.com/ros-controls/control_msgs.git
-    version: 2.5.0
-    version_saved: :{auto}
+    version: :{auto}
   hydro:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
