--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = a7d41e3
-	trimbase = 
+	base = 508d9ea
+	trimbase = a7d41e3
 	parent = upstream
 	previous = e526119
