--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(msg_files
   msg/DynamicJointState.msg
   msg/GripperCommand.msg
   msg/InterfaceValue.msg
+  msg/JointComponentTolerance.msg
   msg/JointControllerState.msg
   msg/JointJog.msg
   msg/JointTolerance.msg
