--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = control_msgs
-	base = cfdb62a
-	trimbase = 
+	base = 75e9a4d
+	trimbase = cfdb62a
 	parent = upstream
 	previous = e526119
