--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/control_msgs
-	previous = 
-	base = 4dfc8ce
+	previous = 4dfc8ce
+	base = 6b67acb
 	trim = 
 	trimbase = 
