--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 60ac95e
-	base = 315d927
-	trim = 
-	trimbase = 
+	base = 36ed6c8
+	trim = control_msgs
+	trimbase = 315d927
