--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/control_msgs
-	previous = 
-	base = 36ed6c8
+	previous = 36ed6c8
+	base = cde94e8
 	trim = 
 	trimbase = 
