--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/control_msgs
-	previous = 
-	base = 0be9191
+	previous = 0be9191
+	base = ff4853f
 	trim = 
 	trimbase = 
