--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/control_msgs
-	previous = 
-	base = 4261eb4
+	previous = 4261eb4
+	base = c34de73
 	trim = 
 	trimbase = 
