--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/control_msgs
-	previous = 
-	base = 62e8bf1
+	previous = 62e8bf1
+	base = 7aac3b7
 	trim = 
 	trimbase = 
