--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d3675e6
-	base = 1535be5
+	base = 58ae34c
 	trim = control_msgs
-	trimbase = 
+	trimbase = 1535be5
