--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da11eb0
-	base = 71c2b5c
+	base = 3aa4677
 	trim = control_msgs
-	trimbase = 
+	trimbase = 71c2b5c
