Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"4.0.0-1": ["Mon Aug 01 2022", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "3.0.0-3": ["Tue Feb 08 2022", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
+{"4.1.0-1": ["Wed Oct 26 2022", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "4.0.0-1": ["Mon Aug 01 2022", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "3.0.0-3": ["Tue Feb 08 2022", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
