--- a/tracks.yaml
+++ b/tracks.yaml
@@ -375,4 +375,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-controls/control_msgs.git
-    version: :{auto}
+    version: 4.1.0
+    version_saved: :{auto}
