--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3e24273
-	base = a1b9333
-	trim = 
-	trimbase = 
+	base = f710e5a
+	trim = control_msgs
+	trimbase = a1b9333
