--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/control_msgs
-	previous = 
-	base = 877b011
+	previous = 877b011
+	base = 3155cc6
 	trim = 
 	trimbase = 
