--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/control_msgs
-	previous = 
-	base = 60b886e
+	previous = 60b886e
+	base = 7dc1e05
 	trim = 
 	trimbase = 
