--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/control_msgs
-	previous = 
-	base = f710e5a
+	previous = f710e5a
+	base = 1975297
 	trim = 
 	trimbase = 
