--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/control_msgs
-	previous = 
-	base = df51c45
+	previous = df51c45
+	base = 606607a
 	trim = 
 	trimbase = 
