--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3e24273
-	base = ad00790
+	base = 122b3ad
 	trim = control_msgs
-	trimbase = 
+	trimbase = ad00790
