Imported upstream version '4.2.0' of 'upstream'

--- a/control_msgs/CMakeLists.txt
+++ b/control_msgs/CMakeLists.txt
@@ -29,7 +29,9 @@ set(msg_files
   msg/JointJog.msg
   msg/JointTolerance.msg
   msg/JointTrajectoryControllerState.msg
+  msg/MecanumDriveControllerState.msg
   msg/PidState.msg
+  msg/SteeringControllerStatus.msg
 )
 
 set(action_files
