--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e4ba1ca
-	base = c371dcf
+	base = e9782a4
 	trim = control_msgs
-	trimbase = 
+	trimbase = c371dcf
