--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,9 @@ set(msg_files
   msg/JointJog.msg
   msg/JointTolerance.msg
   msg/JointTrajectoryControllerState.msg
+  msg/MecanumDriveControllerState.msg
   msg/PidState.msg
+  msg/SteeringControllerStatus.msg
 )
 
 set(action_files
