--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@
 repos:
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v3.4.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -33,42 +33,11 @@ repos:
       - id: fix-byte-order-marker
 
   # Python hooks
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
-    hooks:
-    -   id: pyupgrade
-        args: [--py36-plus]
-
   - repo: https://github.com/psf/black
-    rev: 22.12.0
+    rev: 20.8b1
     hooks:
       - id: black
         args: ["--line-length=99"]
-
-  # PyDocStyle
-  - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.2.3
-    hooks:
-    - id: pydocstyle
-      args: ["--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404"]
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
-    hooks:
-    - id: flake8
-      args: ["--ignore=E501"]
-
-  # Maybe use https://github.com/cpplint/cpplint instead
-  - repo: local
-    hooks:
-      - id: ament_cpplint
-        name: ament_cpplint
-        description: Static code analysis of C/C++ files.
-        stages: [commit]
-        entry: ament_cpplint
-        language: system
-        files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
-        args: ["--linelength=100", "--filter=-whitespace/newline"]
 
   # Cmake hooks
   - repo: local
@@ -93,14 +62,14 @@ repos:
 
   # Docs - RestructuredText hooks
   - repo: https://github.com/PyCQA/doc8
-    rev: v1.1.1
+    rev: 0.9.0a1
     hooks:
       - id: doc8
         args: ['--max-line-length=100', '--ignore=D001']
         exclude: CHANGELOG\.rst$
 
   - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
+    rev: v1.8.0
     hooks:
       - id: rst-backticks
         exclude: CHANGELOG\.rst$
@@ -110,7 +79,7 @@ repos:
   # Spellcheck in comments and docs
   # skipping of *.svg files is not working...
   - repo: https://github.com/codespell-project/codespell
-    rev: v2.2.2
+    rev: v2.0.0
     hooks:
       - id: codespell
         args: ['--write-changes']
