--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,8 +8,7 @@ on:
   pull_request:
   push:
     branches:
-      - foxy-devel
-      - galactic-devel
+      - humble
 
 jobs:
   pre-commit:
@@ -18,8 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
-    - name: Install clang-format-10
-      run: sudo apt-get install clang-format-10 cppcheck
     - uses: pre-commit/action@v2.0.3
       with:
         extra_args: --all-files --hook-stage manual
