--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7d11ed3
-	base = a726832
+	base = d7b4bc8
 	trim = control_msgs
-	trimbase = 
+	trimbase = a726832
