--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 705004b
-	base = d57790d
+	base = 7a9d1a9
 	trim = control_msgs
-	trimbase = 
+	trimbase = d57790d
