--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"4.1.0-3": ["Tue Mar 21 2023", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
+{"4.2.0-2": ["Tue Mar 28 2023", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "4.1.0-3": ["Tue Mar 21 2023", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
