--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2e079dd
-	base = e2a65e5
+	base = 99ce6e2
 	trim = control_msgs
-	trimbase = 
+	trimbase = e2a65e5
