--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 323d339
-	base = 0ddf561
+	base = a445580
 	trim = control_msgs
-	trimbase = 
+	trimbase = 0ddf561
