--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d9f856e
-	base = 4d65cd7
+	base = dcd7b40
 	trim = control_msgs
-	trimbase = 
+	trimbase = 4d65cd7
