--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1a6c9f4
-	base = d10c498
+	base = 906f236
 	trim = control_msgs
-	trimbase = 
+	trimbase = d10c498
