--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 602cfab
-	base = 82a919c
-	trim = 
-	trimbase = 
+	base = ec14da0
+	trim = control_msgs
+	trimbase = 82a919c
