--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/control_msgs
-	previous = 
-	base = ed05d6c
+	previous = ed05d6c
+	base = 8f352fe
 	trim = 
 	trimbase = 
