--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/control_msgs
-	previous = 
-	base = bd9841d
+	previous = bd9841d
+	base = 6db9607
 	trim = 
 	trimbase = 
