--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/control_msgs
-	previous = 
-	base = 801ed2d
+	previous = 801ed2d
+	base = 9afeac7
 	trim = 
 	trimbase = 
