--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e57ea4a
-	base = 356688b
+	base = 505e7b1
 	trim = control_msgs
-	trimbase = 
+	trimbase = 356688b
