--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e57ea4a
-	base = ae8877d
+	base = 7782f02
 	trim = control_msgs
-	trimbase = 
+	trimbase = ae8877d
