Update jazzy track to release the same version as the source distribution.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -305,7 +305,8 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/ros-controls/control_msgs.git
-    version: :{auto}
+    version: 5.1.0
+    version_saved: :{auto}
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
