--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4920551
-	base = f715bd0
+	base = 88acc3c
 	trim = control_msgs
-	trimbase = 
+	trimbase = f715bd0
