--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"5.1.0-1": ["Tue Apr 09 2024", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "5.0.0-2": ["Tue Mar 05 2024", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
+{"5.1.0-2": ["Thu Apr 18 2024", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "5.1.0-1": ["Tue Apr 09 2024", "Bence Magyar", "bence.magyar.robotics@gmail.com"], "5.0.0-2": ["Tue Mar 05 2024", "Bence Magyar", "bence.magyar.robotics@gmail.com"]}
