--- a/.github/workflows/rolling-build.yml
+++ b/.github/workflows/rolling-build.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ROS_DISTRO: [rolling, iron]
+        ROS_DISTRO: [iron, jazzy, rolling]
         ROS_REPO: [main, testing]
     with:
       ros_distro: ${{ matrix.ROS_DISTRO }}
