--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 35d5314
-	base = 88ba4a4
+	base = 4695e7f
 	trim = control_msgs
-	trimbase = 
+	trimbase = 88ba4a4
