--- a/package.xml
+++ b/package.xml
@@ -2,15 +2,17 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>control_msgs</name>
-  <version>4.4.0</version>
+  <version>4.5.0</version>
   <description>
     control_msgs contains base messages and actions useful for
-    controlling robots.  It provides representations for controller
+    controlling robots. It provides representations for controller
     setpoints and joint and cartesian trajectories.
   </description>
   <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
-  <license>BSD</license>
-  <url>http://ros.org/wiki/control_msgs</url>
+
+  <license>BSD-3-Clause</license>
+
+  <url type="website">https://control.ros.org</url>
   <author email="sglaser@willowgarage.com">Stuart Glaser</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
