--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = af1f1a5
-	base = 2d6fbca
+	base = f21b7dd
 	trim = control_msgs
-	trimbase = 
+	trimbase = 2d6fbca
