--- a/control_msgs/package.xml
+++ b/control_msgs/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>control_msgs</name>
-  <version>4.6.0</version>
+  <version>5.2.0</version>
   <description>
     control_msgs contains base messages and actions useful for
     controlling robots. It provides representations for controller
@@ -18,6 +18,9 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
+  <!-- action_msgs is needed up to humble -->
+  <!-- https://github.com/ros2/rcl_interfaces/issues/75 -->
+  <!-- TODO(anyone) remove if master branch - compatibility on humble is not necessary anymore -->
   <depend>action_msgs</depend>
   <depend>builtin_interfaces</depend>
   <depend>geometry_msgs</depend>
