--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5071808
-	base = 2dab16f
+	base = aa6a01d
 	trim = control_msgs
-	trimbase = 
+	trimbase = 2dab16f
