--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5071808
-	base = 071914e
+	base = 5dbea9d
 	trim = control_msgs
-	trimbase = 
+	trimbase = 071914e
