--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5071808
-	base = 4b4a641
+	base = a1ef9a0
 	trim = control_msgs
-	trimbase = 
+	trimbase = 4b4a641
