--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 82046ec
-	base = 183935f
+	base = c8db594
 	trim = control_msgs
-	trimbase = 
+	trimbase = 183935f
