--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 82046ec
-	base = ddec575
+	base = 7323731
 	trim = control_msgs
-	trimbase = 
+	trimbase = ddec575
