--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 82046ec
-	base = f28509b
+	base = 140eeea
 	trim = control_msgs
-	trimbase = 
+	trimbase = f28509b
