--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8840b7e
-	base = 0e89575
+	base = fb2f526
 	trim = control_msgs
-	trimbase = 
+	trimbase = 0e89575
