--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 477ad7f
-	base = e19a7fa
+	base = 664674b
 	trim = control_msgs
-	trimbase = 
+	trimbase = e19a7fa
