--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f230a0e
-	base = fa102de
+	base = 0fa6fa1
 	trim = control_msgs
-	trimbase = 
+	trimbase = fa102de
