--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c057999
-	base = 8300f94
+	base = 345cfb9
 	trim = control_msgs
-	trimbase = 
+	trimbase = 8300f94
