--- a/tracks.yaml
+++ b/tracks.yaml
@@ -331,7 +331,8 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/ros-controls/control_msgs.git
-    version: :{auto}
+    version: 6.0.0
+    version_saved: :{auto}
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
