--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c057999b999d
-	base = b2ef6bd41246
+	base = c044ac2e0f9e
 	trim = control_msgs
-	trimbase = 
+	trimbase = b2ef6bd41246
