--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84e7cf7
-	base = 0cb4f11
+	base = e8a1499
 	trim = control_msgs
-	trimbase = 
+	trimbase = 0cb4f11
