--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 84e7cf78b875
-	base = b2c09c4b535d
+	base = f89a1d282cf9
 	trim = control_msgs
-	trimbase = 
+	trimbase = b2c09c4b535d
