--- a/.github/workflows/humble-build.yml
+++ b/.github/workflows/humble-build.yml
@@ -12,7 +12,7 @@ on:
       - humble
   schedule:
     # Run every morning to detect flakiness and broken dependencies
-    - cron: '28 6 * * *'
+    - cron: '28 6 * * MON-FRI'
 
 concurrency:
   # cancel previous runs of the same workflow, except for pushes on master branch
