--- a/.github/workflows/rolling-binary-downstream-build.yml
+++ b/.github/workflows/rolling-binary-downstream-build.yml
@@ -18,11 +18,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ROS_DISTRO: [rolling]
-        ROS_REPO: [testing]
+        ROS_DISTRO: [kilted, rolling]
     with:
       ros_distro: ${{ matrix.ROS_DISTRO }}
-      ros_repo: ${{ matrix.ROS_REPO }}
+      ros_repo: testing
       ref_for_scheduled_build: master
       not_test_build: true
       downstream_workspace: ros_controls.${{ matrix.ROS_DISTRO }}.repos
