--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b6bef1
-	base = 6bb1f3b
+	base = 1a0eebe
 	trim = control_msgs
-	trimbase = 
+	trimbase = 6bb1f3b
