--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b6bef1
-	base = 006e4a7
+	base = 2ab1a7b
 	trim = control_msgs
-	trimbase = 
+	trimbase = 006e4a7
