--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e4f40d9
-	base = da8e9b5
+	base = 5d3c771
 	trim = control_msgs
-	trimbase = 
+	trimbase = da8e9b5
