--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f737d5f
-	base = 74f4a4c
+	base = fad0d2d
 	trim = control_msgs
-	trimbase = 
+	trimbase = 74f4a4c
