--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f737d5f
-	base = 1017211
+	base = f92ce4b
 	trim = control_msgs
-	trimbase = 
+	trimbase = 1017211
