--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a9097fe
-	base = a6dc9f3
+	base = fb9bac2
 	trim = control_msgs
-	trimbase = 
+	trimbase = a6dc9f3
