--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a9097fe
-	base = 1775b62
+	base = 3a3337a
 	trim = control_msgs
-	trimbase = 
+	trimbase = 1775b62
