--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 19d570b
-	base = b97bd75
+	base = 21a1884
 	trim = control_msgs
-	trimbase = 
+	trimbase = b97bd75
