--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a05d013
-	base = 28c54c3
+	base = 4be6d25
 	trim = control_msgs
-	trimbase = 
+	trimbase = 28c54c3
