--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a05d013
-	base = cde0271
+	base = 74a8540
 	trim = control_msgs
-	trimbase = 
+	trimbase = cde0271
